# pencil_pose

./: 2024年陕西省大学生电子设计竞赛七校联赛题 铅笔姿态及笔迹检测装置（C 题）.md
software/esp23_measurement/: CMakeLists.txt  sdkconfig.old
software/esp23_measurement/components/espnow/: espnow.c
software/esp23_measurement/main/: main.cpp  mpu6050.cpp  parameter.h
software/esp32_transmission/: sdkconfig
software/esp32_transmission/components/espnow/: CMakeLists.txt  espnow.c
software/esp32_transmission/components/espnow/include/: espnow.h
software/esp32_transmission/components/led/include/: led.h
software/esp32_transmission/components/sd_card/: CMakeLists.txt  Kconfig.projbuild  sd_card.c
software/esp32_transmission/components/sd_card/include/: sd_card.h
software/esp32_transmission/components/serial_screen/: CMakeLists.txt  serial_screen.c
software/esp32_transmission/components/serial_screen/include/: serial_screen.h
software/esp32_transmission/main/: main.c
software/mpu6050_demo/: .gitignore
software/mpu6050_demo/MPU6050_DMP6/main/: main.cpp
